syntax = "proto3";

package pb;

option go_package = "./pb";

// ------------------------------- Document ---------------------------------
message FileChunk {
    string file_name = 1;
    bytes content = 2; // Dữ liệu file được gửi theo từng chunk.
}

message UploadStatus {
    int32 doc_id = 1;
    string file_path = 2;
    string message = 3; 
    bool success = 4;
}

message ImportFileData {
    string file_path = 1;
    string type = 2;
}

message ImportResult {
    int32 report_id = 1;
    string message = 2; 
    bool success = 3;
}



// >> Document rpc...
service Document {
    rpc UploadFile (stream FileChunk) returns (UploadStatus);
    rpc ImportFinancialData (ImportFileData) returns (stream ImportResult);
}